
CLEANFILES			= *~
MAINTAINERCLEANFILES		= Makefile.in

noinst_HEADERS			= \
	linux/dcbnl.h

wicked_include_HEADERS		= \
	wicked/addrconf.h	\
	wicked/address.h	\
	wicked/bonding.h	\
	wicked/bridge.h		\
	wicked/client.h		\
	wicked/constants.h	\
	wicked/dbus.h		\
	wicked/dbus-errors.h	\
	wicked/dbus-service.h	\
	wicked/dcb.h		\
	wicked/ethernet.h	\
	wicked/fsm.h		\
	wicked/ifstate.h        \
	wicked/infiniband.h	\
	wicked/ipv4.h		\
	wicked/ipv6.h		\
	wicked/leaseinfo.h	\
	wicked/linkstats.h	\
	wicked/lldp.h		\
	wicked/logging.h	\
	wicked/modem.h		\
	wicked/netinfo.h	\
	wicked/nis.h		\
	wicked/objectmodel.h	\
	wicked/openvpn.h	\
	wicked/pci.h		\
	wicked/ppp.h		\
	wicked/resolver.h	\
	wicked/route.h		\
	wicked/secret.h		\
	wicked/socket.h		\
	wicked/sysconfig.h	\
	wicked/system.h		\
	wicked/types.h		\
	wicked/util.h		\
	wicked/vlan.h		\
	wicked/wicked.h		\
	wicked/wireless.h	\
	wicked/xml.h		\
	wicked/xpath.h

# vim: ai
