
CLEANFILES			= *~ $(generated_in_man) $(generated_md_man)
DISTCLEANFILES			= $(CLEANFILES)
MAINTAINERCLEANFILES		= Makefile.in

BUILT_SOURCES			=
EXTRA_DIST			= $(generated_in_man) $(generated_md_man) \
				  $(templates_md_in)  $(templates_md_src) \
				  $(templates_in)

if pandoc
DISTCLEANFILES			+= $(templates_md_in)
MAINTAINERCLEANFILES		+= $(templates_md_in)
BUILT_SOURCES			+= $(templates_md_in)
endif

man_MANS			= \
	$(generated_md_man)	\
	$(generated_in_man)

generated_in_man		= \
	ifcfg-bond.5		\
	ifcfg-bridge.5		\
	ifcfg-dhcp.5		\
	ifcfg-infiniband.5	\
	ifcfg-lo.5		\
	ifcfg-macvlan.5		\
	ifcfg-macvtap.5		\
	ifcfg-ovs-bridge.5	\
	ifcfg-ppp.5		\
	ifcfg-tunnel.5		\
	ifcfg-vlan.5		\
	ifcfg-vxlan.5		\
	ifcfg.5			\
	ifdown.8		\
	ifroute.5		\
	ifrule.5		\
	ifstatus.8		\
	ifup.8			\
	routes.5		\
	wicked-config.5		\
	wicked-ethtool.8	\
	wicked.7		\
	wicked.8		\
	wickedd.8

generated_md_man		= \
	ifcfg-bonding.5		\
	ifcfg-dummy.5		\
	ifcfg-ipvlan.5		\
	ifcfg-ipvtap.5		\
	ifcfg-ipoib.5		\
	ifcfg-team.5		\
	ifcfg-wireless.5	\
	ifsysctl.5		\
	wicked-firmware.8	\
	wicked-redfish.8


templates_md_src		= $(addprefix src/,$(generated_md_man:=.md))
templates_md_in			= $(generated_md_man:=.in)
templates_in			= $(generated_in_man:=.in)

templatepp			= $(top_srcdir)/util/templatepp.gawk

# pandoc would write @VAR@ as [at]VAR[at] to .in:
#   .md sources are using %VAR% variables, while
#   .in templates are using common autoconf @VAR@
substitute_md_vars		= \
	$(AM_V_GEN)sed -E -e 's|%([[:alnum:]_]+)%|@\1@|g'

substitute_vars			= \
	$(AM_V_GEN)$(AWK) -f $(templatepp) --			\
	-V wicked_piddir='$(wicked_piddir)'			\
	-V wicked_sbindir='$(wicked_sbindir)'			\
	-V wicked_statedir='$(wicked_statedir)'			\
	-V wicked_storedir='$(wicked_storedir)'			\
	-V wicked_schemadir='$(wicked_schemadir)'		\
	-V wicked_configdir='$(wicked_configdir)'		\
	-V wicked_supplicantdir='$(wicked_supplicantdir)'	\
	-V wicked_scriptsdir='$(wicked_scriptsdir)'		\
	-V wicked_extensionsdir='$(wicked_extensionsdir)'	\
	-V PACKAGE_BUGREPORT='$(PACKAGE_BUGREPORT)'

# The #if system_* markers follow the distribution (/usr) vs. system (/etc)
# split of the respective configure --with-* option; the -C flag is left out
# (evaluates to false) when no separate system directory is configured.
# The system_configdir is also referenced unconditionally (ifconfig default,
# client-firmware.xml) and thus falls back to the distribution config dir.
if system_config
substitute_vars			+= \
	-C system_config					\
	-V system_configdir='$(system_configdir)'
else
substitute_vars			+= \
	-V system_configdir='$(wicked_configdir)'
endif
if system_scripts
substitute_vars			+= \
	-C system_scripts					\
	-V system_scriptsdir='$(system_scriptsdir)'
endif
if system_extensions
substitute_vars			+= \
	-C system_extensions					\
	-V system_extensionsdir='$(system_extensionsdir)'
endif

%: %.in $(top_builddir)/config.status
	@if $(AM_V_P); then echo "substituting variables: $< > $@" ; fi
	@rm -f $@ $@.tmp
	@$(substitute_vars) -i $< -o $@.tmp && mv $@.tmp $@

if pandoc
# Strip the pandoc version from the generated template so regenerating
# it with a different pandoc version does not produce spurious diffs.
%.in: src/%.md $(top_builddir)/config.status
	@if $(AM_V_P); then echo "generating manual page: $< > $@" ; fi
	@rm -f $@ $@.tmp
	@$(AM_V_GEN)$(PANDOC) -s -f markdown -t man $< -o $@.tmp
	@sed -i -e 's|\(generated by Pandoc\) .*|\1|' $@.tmp
	@$(substitute_md_vars) -i $@.tmp && mv $@.tmp $@
endif

# vim: ai
